syntax = "proto3";
option csharp_namespace="ProtocData";
enum MsgType
{
	Login_Request 		= 0;
	Login_Response 		= 1;
	Register_Request 	= 2;
	Register_Response 	= 3;
	
	Max = 100;
}

message LoginRequest
{
	string username = 1;
	string password = 2;
}

message LoginResponse
{
	int32 returnCode = 1;
}

message RegisterRequest
{
	string username = 1;
	string password = 2;
}

message RegisterResponse
{
	int32 returnCode = 1;
}

